--- a/thesis/EE-dyplom.bib
+++ b/thesis/EE-dyplom.bib
@@ -1,178 +1,122 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Typy bibliografii:
-%  - artykuł z czasopisma,
-%  - artykuł z konferencji,
-%  - materiały konferencyjne,
-%  - książka,
-%  - fragment książki,
-%  - książka z serii,
-%  - krótka broszura,
-%  - praca magisterska,
-%  - praca doktorska,
-%  - instrukcja obsługi,
-%  - raport techniczny,
-%  - materiały nieopublikowane,
-%  - inne typy materiałów źródłowych.
-% Więcej informacji na stronie https://www.bibtex.com/
+% Książki
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Artykuły naukowe z czasopism i konferencji
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Article - artykuł z czasopisma.
-% Wymagane pola: author, title, journal, year.
-% Opcjonalne pola: volume, number, pages, month, note.
-@Article{maxwell1865,
-    author  = {James Clerk Maxwell},
-    title   = {A Dynamical Theory of the Electromagnetic Field},
-    journal = {Philosophical Transactions of the Royal Society},
-    year    = {1865},
-    number  = {155},
-    pages   = {459-512},
-    month   = {1},
-    note    = {\href{https://royalsocietypublishing.org/doi/pdf/10.1098/rstl.1865.0008}{<https://royalsocietypublishing.org/doi/pdf/10.1098/rstl.1865.0008>}, dostęp uzyskano 2020-12-03},
+@book{sommerville2015,
+    author    = {Ian Sommerville},
+    title     = {Software Engineering},
+    publisher = {Pearson},
+    year      = {2015},
+    edition   = {10},
+    isbn      = {978-0133943030},
+}
+
+@book{fowler2002,
+    author    = {Martin Fowler},
+    title     = {Patterns of Enterprise Application Architecture},
+    publisher = {Addison-Wesley Professional},
+    year      = {2002},
+    isbn      = {978-0321127426},
+}
+
+@book{nosql_distilled,
+    author    = {Pramod J. Sadalage and Martin Fowler},
+    title     = {NoSQL Distilled: A Brief Guide to the Emerging World of Polyglot Persistence},
+    publisher = {Addison-Wesley},
+    year      = {2012},
+    isbn      = {978-0321826626},
+}
+
+@book{cleancode,
+    author    = {Robert C. Martin},
+    title     = {Clean Code: A Handbook of Agile Software Craftsmanship},
+    publisher = {Prentice Hall},
+    year      = {2008},
+    isbn      = {978-0132350884},
+}
+
+@book{tanenbaum_networks,
+    author    = {Andrew S. Tanenbaum and David J. Wetherall},
+    title     = {Computer Networks},
+    publisher = {Pearson},
+    year      = {2010},
+    edition   = {5},
+    isbn      = {978-0132126953},
+}
+
+@book{seemann_di,
+    author    = {Mark Seemann and Steven van Deursen},
+    title     = {Dependency Injection Principles, Practices, and Patterns},
+    publisher = {Manning Publications},
+    year      = {2019},
+    isbn      = {978-1617294730},
+}
+
+@phdthesis{fielding_rest,
+    author    = {Roy Thomas Fielding},
+    title     = {Architectural Styles and the Design of Network-based Software Architectures},
+    school    = {University of California, Irvine},
+    year      = {2000},
+    note      = {\href{https://www.ics.uci.edu/~fielding/pubs/dissertation/top.htm}{<https://www.ics.uci.edu/~fielding/pubs/dissertation/top.htm>}, dostęp uzyskano 2025-07-20},
 }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% InProceedings - artykuły z konferencji
-% Wymagane pola: author or editor, title, publisher, year.
-% Opcjonalne pola: volume or number, series, address, edition, month, note.
-@inproceedings{cichon1995,
-    author  = {D. J. {Cichon} and W. {Wiesbeck}},
-    title   = {The Heinrich Hertz wireless experiments at Karlsruhe in the view of modern communication},
-    publisher   = {Institution of Engineering and Technology},
-    year        = {1995},
+% Dokumenty techniczne i manuale (Dokumentacja Frameworków)
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+@manual{react_docs,
+    title        = {React Documentation},
+    author       = {{Meta Platforms, Inc.}},
+    organization = {Meta Open Source},
+    year         = {2025},
+    note         = {\href{https://react.dev/}{<https://react.dev/>}, dostęp uzyskano 2025-07-20},
+}
+
+@manual{fastapi_docs,
+    title        = {FastAPI Documentation},
+    author       = {Sebastián Ramírez},
+    year         = {2025},
+    note         = {\href{https://fastapi.tiangolo.com/}{<https://fastapi.tiangolo.com/>}, dostęp uzyskano 2025-07-20},
+}
+
+@manual{postgresql_docs,
+    title        = {PostgreSQL 16.2 Documentation},
+    author       = {{The PostgreSQL Global Development Group}},
+    year         = {2025},
+    note         = {\href{https://www.postgresql.org/docs/}{<https://www.postgresql.org/docs/>}, dostęp uzyskano 2025-07-20},
+}
+
+@manual{elasticsearch_guide,
+    title        = {Elasticsearch Guide},
+    author       = {{Elastic NV}},
+    year         = {2025},
+    note         = {\href{https://www.elastic.co/guide/en/elasticsearch/reference/current/index.html}{<https://www.elastic.co/guide/en/elasticsearch/reference/current/index.html>}, dostęp uzyskano 2025-07-20},
+}
+
+@manual{docker_docs,
+    title        = {Docker Documentation},
+    author       = {{Docker Inc.}},
+    year         = {2025},
+    note         = {\href{https://docs.docker.com/}{<https://docs.docker.com/>}, dostęp uzyskano 2025-07-20},
+}
+
+@manual{owasp_passwords,
+    title        = {Password Storage Cheat Sheet},
+    author       = {{OWASP Foundation}},
+    year         = {2025},
+    note         = {\href{https://cheatsheetseries.owasp.org/cheatsheets/Password_Storage_Cheat_Sheet.html}{<https://cheatsheetseries.owasp.org/cheatsheets/Password\_Storage\_Cheat\_Sheet.html>}, dostęp uzyskano 2025-07-20},
 }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Proceedings - publikacja pokonferencyjna, zbiór artykułów z jednej konferencji
-% Wymagane pola: title, year.
-% Opcjonalne pola: editor, volume or number, series, address, publisher, note, month, organization.
-@proceedings{cpee2018,
-    title   = {19th International Conference Computational Problems of Electrical Engineering},
-    year    = {2018},
-    note    = {doi: \href{https://doi.org/10.1109/CPEE44871.2018}{10.1109/CPEE44871.2018}},
-}
+% Raporty techniczne (RFC)
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Materiały książkowe
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Book - książka mająca wydawcę.
-% Wymagane pola: author or editor, title, publisher, year.
-% Opcjonalne pola: volume or number, series, address, edition, month, note.
-@book{fowler2009,
-    author    = {Kim Fowler},
-    title     = {Mission-Critical and Safety-Critical Systems Handbook: Design and Development for Embedded Applications},
-    publisher = {Newnes},
-    year      = {2009},
-    ISBN      = {978-0750685672},
+@techreport{rfc7519,
+    author       = {M. Jones and J. Bradley and N. Sakimura},
+    title        = {JSON Web Token (JWT)},
+    institution  = {RFC Editor},
+    year         = {2015},
+    type         = {RFC},
+    number       = {7519},
+    note         = {\href{https://www.rfc-editor.org/info/rfc7519}{<https://www.rfc-editor.org/info/rfc7519>}, dostęp uzyskano 2025-07-20},
 }
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Inbook - część książki, na przykład rozdział i/lub zakres stron.
-% Wymagane pola: author lub editor, title, chapter i/lub pages, publisher, year.
-% Opcjonalne pola: volume or number, series, type, address, edition, month, note.
-@inbook{leksinski1995,
-  chapter   = {1-2},
-  pages     = {9-232},
-  title     = {Matematyka},
-  publisher = {Wydawnictwa Naukowo-Techniczne},
-  year      = {1995},
-  author    = {Wojciech Żakowski and Wacław Leksiński},
-}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Incollection - część książki mająca własny tytuł, również książka z serii.
-% Wymagane pola: author, title, booktitle, publisher, year.
-% Opcjonalne pola: editor, volume or number, series, type, chapter, pages, address, edition, month, note.
-@incollection{lncsevo,
-  author    = {Gyu Myoung Lee and Noel Crespi and Jun Kyun Choi and Matthieu Boussard},
-  title     = {Internet of Things},
-  booktitle = {Evolution of Telecommunication Services},
-  series    = {Lecture Notes in Computer Science},
-  publisher = {Springer-Verlag Berlin Heidelberg},
-  year      = {2013},
-  editor    = {Emmanuel Bertin and Noel Crespi and Thomas Magedanz},
-  volume    = {7768},
-  isbn      = {978-3642415685},
-}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Booklet - praca, która została wydrukowana i oprawiona ale nie mająca wydawcy lub stojącej za nią instytucji, broszurka mająca 4-48 stron
-% Wymagane pola: title.
-% Opcjonalne pola: author, howpublished, address, month, year, note.
-@booklet{giglio,
-  author = {Pierluigi Giglio},
-  title  = {Postmodernism and Plagiarism},
-}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% MastersThesis - praca magisterska (uwaga: masters a nie master)
-% Wymagane pola: author, title, school, year.
-% Opcjonalne pola: type, address, month, note.
-@mastersthesis{poirier2020,
-    author  = {Izabela Poirier},
-    title   = {Wykorzystanie technologii Blockchain w komunikacji urządzeń Internetu Rzeczy},
-    school  = {Politechnika Warszawska, Wydział Elektryczny, Instytut Elektrotechniki Teoretycznej i Systemów Informacyjno-Pomiarowych},
-    year    = {2020},
-}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% phdthesis - praca doktorska
-% Wymagane pola: author, title, school, year.
-% Opcjonalne pola: type, address, month, note.
-@phdthesis{truong2018,
-    author  = {Nguyen Binh Truong},
-    title   = {Evaluation of trust in the Internet of Things : models, mechanisms and applications},
-    school  = {Liverpool John Moores University},
-    year    = {2018},
-    note    = {doi: \href{http://doi.org/10.24377/researchonline.ljmu.ac.uk.00009241}{10.24377/researchonline.ljmu.ac.uk.00009241}}
-}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Dokumenty techniczne
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% manual - instrukcja obługi, specyfikacja techniczna, nota katalogowa (datasheet)
-% Wymagane pola: title.
-% Opcjonalne pola: author, organization, address, edition, month, year, note.
-@manual{AN4230,
-    title           = {STM32 microcontroller random number generation validation using the NIST statistical test suite},
-    organization    = {STMicroelectronics},
-    year            = {2020},
-    month           = {8},
-    note            = {AN4230},
-}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% techreport - raport techniczny
-% Wymagane pola: author, title, institution, year.
-% Opcjonalne pola: type, number, address, month, note.
-@techreport{nask2020,
-    author      = {{Zespół CERT Polska}},   % Nietypowy autor - dodatkowe nawiasy powodują, że nie zostanie uznany za imię i nazwisko co byłoby komiczne (Polska Z. C.)
-    title       = {Krajobraz bezpieczeństwa polskiego Internetu w 2019 roku},
-    institution = {NASK -- Państwowy Instytut Badawczy},
-    year        = {2020},
-}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Dokumenty nietypowe
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% unpublished - dokument mający autora i tytuł ale nie opublikowany typowymi metodami
-% Wymagane pola: author, title, note.
-% Opcjonalne pola: month, year.
-@unpublished{wilamowski2017,
-  author    = {Maciej Wilamowski},
-  title     = {,,Daj, ać ja pobruczę, a ty poczywaj''. Pierwsze zdanie po polsku w historii},
-  note    = {\href{https://twojahistoria.pl/2017/11/21/daj-ac-ja-pobrucze-a-ty-poczywaj-co-powinienes-wiedziec-o-pierwszym-zdaniu-zapisanym-w-jezyku-polskim/}{<https://twojahistoria.pl/2017/11/21/daj-ac-ja-pobrucze-a-ty-poczywaj-co-powinienes-wiedziec-o-pierwszym-zdaniu-zapisanym-w-jezyku-polskim/>}, dostęp uzyskano 2020-12-03},
-}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% misc - jeśli wszystkie inne kategorie nie pasują; przynajmniej jedno z pól opcjonalnych musi być użyte
-% Wymagane pola: brak
-% Opcjonalne pola: author, title, howpublished, month, year, note.
-@misc{szablon,
-    author  = {Łukasz Makowski},
-    title   = {Szablon prac dyplomowych dla Wydziału Elektrycznego Politechniki Warszawskiej},
-    howpublished    = {\href{https://github.com/SP5LMA/EE-Dyplom}{<https://github.com/SP5LMA/EE-Dyplom>}},
-}
-
