frontend zarządzanie stanem aplikacji subsection

--- a/thesis/EE-dyplom.tex
+++ b/thesis/EE-dyplom.tex
@@ -23,6 +23,17 @@
 %	wip
 %	]
 \usepackage{placeins}
+\usepackage{dirtree}
+
+\usepackage{listings}
+\usepackage{xcolor}
+\definecolor{ac-red}{rgb}{0.8,0,0}       % Keywords (like 'def', 'return')
+\definecolor{ac-blue}{rgb}{0,0,0.8}      % Functions/Types
+\definecolor{ac-purple}{rgb}{0.5,0,0.5}  % Strings
+\definecolor{ac-gray}{rgb}{0.5,0.5,0.5}  % Comments
+\definecolor{ac-black}{rgb}{0,0,0}       % Standard text
+
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Konfiguracja - do personalizacji
 % Configuration - to be personalized
